# splinkclickhouse

./: .gitignore  CHANGELOG.md  LICENSE  README.md  codecov.yml  dev.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yaml  check-install-no-chdb.yaml  documentation.yaml  lint.yaml  publish-pypi.yaml  test-chdb.yaml  test-clickhouse.yaml  test-core.yaml  type-hinting.yaml
benchmarking/: benchmark.py  combine_data.py  timer.py
benchmarking/utils/: stacked_bar_spec.json  timer.py
docs/: advanced.md  contributing.md  index.md  quickstart.md
docs/api/: comparison_library.md  database_api.md  index.md  libraries.md
docs/clickhouse_server/: advanced.md  index.md
docs/engines/: chdb.md  clickhouse_server.md
docs/hooks/: hooks.py  on_files.py
docs/stylesheets/: extra.css
scripts/: all_benchmarks.sh  bump_version.sh  check_package.sh  docker-compose.yaml  getting_started.py  getting_started_clickhouse.py  run_tests.sh  setup_clickhouse.sh  teardown_clickhouse.sh  update_version.py
splinkclickhouse/: __init__.py  column_expression.py  comparison_level_library.py  comparison_library.py  custom_sql.py  database_api.py  dataframe.py  dialect.py
splinkclickhouse/chdb/: database_api.py  dataframe.py
splinkclickhouse/clickhouse/: database_api.py  dataframe.py
splinkclickhouse/clickhouse_server/: database_api.py  dataframe.py
tests/: conftest.py  test_basic_functionality.py  test_cl.py  test_cl_ch.py  test_cll_ch.py  test_db_api.py  test_debug_mode.py  test_full_run.py  test_udfs.py
