[project]
name = "splinkclickhouse"
version = "0.2.4"
description = "Clickhouse backend support for Splink"
authors = [{name = "Andrew Bond"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "splink >= 4.0.0",
    "chdb >= 2.0.1",
    "clickhouse_connect >= 0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff == 0.6.4",
    "mypy == 1.11.2",
    "pytest == 8.3.3"
]
package = true

[tool.hatch.build.targets.sdist]
# opt-in to build
include = [
    "splinkclickhouse/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml"
]

[tool.ruff]
line-length = 88
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # bugbear
    "B",
    # flake8-print
    "T20"
]

[tool.mypy]
packages = "splinkclickhouse"

implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    # tests not marked with chdb or clickhouse:
    "core",
    # these run backend versions of tests, and core
    "chdb",
    "clickhouse",
    # these do only the backend ones, no core
    "chdb_no_core",
    "clickhouse_no_core",
]
